--- a/views/common/navbar.pug
+++ b/views/common/navbar.pug
@@ -8,3 +8,14 @@ mixin navbar()
             a.nav-link(href="/") Home
             li.nav-item
             a.nav-link(href="/leads") Leads 
+        .navbar-right
+            if user
+                span.navbar-text Hello #{user.email}!
+        .navbar-right
+            ul.navbar-nav.mr-auto
+                li.nav-item
+                    a.nav-link(href="/signup") Sign up
+                li.nav-item
+                    a.nav-link(href="/login") Login
+                li.nav-item
+                    a.nav-link(href="/logout") Logout        
